feat: settings and image gallery

--- a/crit_PauseMenu/public/client/html/index.html
+++ b/crit_PauseMenu/public/client/html/index.html
@@ -52,14 +52,14 @@
 						<span class="blur">SETTINGS</span>
 					</button>
 					<button
-						class="noselect left-container-button setCopVeh keyBindingsHeader"
+						class="noselect left-container-button setCopVeh galleryHeader"
 						onclick="togglePanel(this)"
-						optionID="social"
+						optionID="gallery"
 						leftSide="true"
 						panel=".empty-panel"
 						tabindex="0"
 					>
-						<span class="blur">KEY BINDINGS</span>
+						<span class="blur">GALLERY</span>
 					</button>
 					<select
 						class="left-container-language-select"
